<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:background="@color/lightGrey">

    <TextView
        style="@style/detail_card_title"
        android:text="@string/contact_hospital" />

    <LinearLayout
        style="@style/detail_card"
        android:background="@drawable/border">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tel"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hosp_tel"
                    android:textColor="#515151"
                    android:text=""/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hosp_address"
                    android:textColor="#515151"
                    android:text=""/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/inCharge"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hosp_inCharge"
                    android:textColor="#515151"
                    android:text=""/>

            </TableRow>


        </TableLayout>

    </LinearLayout>

</LinearLayout>