<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        style="@style/detail_card_title"
        android:text="@string/supplies_remains" />

    <LinearLayout
        style="@style/detail_card"
        android:background="@drawable/border">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:shrinkColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/n95"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/n95_view"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/surgeon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/surgeon_view"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/ventilator"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/ventilator_view"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/glasses"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/glasses_view"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/clothe"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/clothe_view"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/alcohol"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/alcohol_view"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="@string/pants"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/pants_view"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>