<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".HospitalMainPageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:outlineAmbientShadowColor="@color/darkGrey"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:targetApi="p" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <LinearLayout
            style="@style/home_row">

            <androidx.cardview.widget.CardView
                android:id="@+id/page_card"
                style="@style/home_card"
                app:cardBackgroundColor="@color/cardLightBlue"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/mainpage"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/home_card_title"
                            android:text="@string/my_page"/>

                        <TextView
                            style="@style/home_card_desc"
                            android:text="@string/my_page_desc"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/hospital_card"
                style="@style/home_card"
                app:cardBackgroundColor="@color/cardGreen"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/hospital_list"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                            <TextView
                                style="@style/home_card_title"
                                android:text="@string/hospitals"/>

                            <TextView
                                style="@style/home_card_desc"
                                android:text="@string/hospitals_desc"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            style="@style/home_row">

            <androidx.cardview.widget.CardView
                android:id="@+id/track_card"
                style="@style/home_card"
                app:cardBackgroundColor="@color/cardBlue"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/track"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/home_card_title"
                            android:text="@string/track"/>

                        <TextView
                            style="@style/home_card_desc"
                            android:text="@string/track_desc"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/auth_card"
                style="@style/home_card"
                app:cardBackgroundColor="@color/cardDarkGreen"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/auth"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/home_card_title"
                            android:text="@string/authentication"/>

                        <TextView
                            style="@style/home_card_desc"
                            android:text="@string/auth_desc"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>