<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".HospitalMainPageActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:background="#fff"
            android:layout_margin="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital_auth"
                android:textColor="@color/textGrey"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/user"
                    android:layout_marginRight="10dp"/>

                <EditText
                    android:id="@+id/hospital_auth_username"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:textSize="16dp"
                    android:hint="@string/inputUsername" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/password"/>

                <EditText
                    android:id="@+id/hospital_auth_password"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:textSize="16dp"
                    android:hint="@string/inputPassword"
                    android:inputType="textPassword" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_height="36dp"
                app:cardBackgroundColor="@color/cardGreen"
                app:cardElevation="3dp"
                app:cardCornerRadius="15dp">

                <Button
                    android:id="@+id/hospital_submit_auth"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/submit"
                    android:layout_gravity="center"
                    android:background="@color/cardGreen"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>