<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".HospitalMainPageActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:outlineAmbientShadowColor="@color/darkGrey"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:targetApi="p" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:background="#fff"
            android:layout_margin="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textGrey"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:textStyle="bold"
                android:text="@string/set_username" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/set_name_hint1" />

            <EditText
                android:id="@+id/set_username"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="16dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/submit_username"
                android:layout_width="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="36dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/cardBlue"
                app:cardElevation="3dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>